--- a/rapport/CompteRendu.tex
+++ b/rapport/CompteRendu.tex
@@ -464,7 +464,7 @@ Ce filtre n'a d'int\'{e}r\^{e}t que s'il est appliqu\'{e} apr\`{e}s le filtre <<
 %===== 4eme sous sous partie ====
 \subsubsection{Travail effectu\'{e} par LIMSI}
 
-Gr\^{a}ce \`{a} nos recherches effectu\'{e}es sur WiCoPaCo, nous avons pu trouver des travaux effectu\'{e}s par des chercheurs du LIMSI[\cite[3]{3}]. Ces travaux \autocite[1]{https://wicopaco.limsi.fr/pub/taln10.pdf} leurs ont permis d'extraire automatiquement des fichiers XML de WiCoPaCo un corpus d'erreurs compos\'{e} de 72 483 erreurs lexicales et 74 100 erreurs grammaticales. Leurs r\'{e}sultats peuvent \^{e}tre extraits 
+Gr\^{a}ce \`{a} nos recherches effectu\'{e}es sur WiCoPaCo, nous avons pu trouver des travaux[\cite[4]{4}] effectu\'{e}s par des chercheurs du LIMSI[\cite[3]{3}]. Ces travaux \autocite[1]{https://wicopaco.limsi.fr/pub/taln10.pdf} leurs ont permis d'extraire automatiquement des fichiers XML de WiCoPaCo un corpus d'erreurs compos\'{e} de 72 483 erreurs lexicales et 74 100 erreurs grammaticales. Leurs r\'{e}sultats peuvent \^{e}tre extraits 
 \`{a} partir d'un fichier XML regroupant les 150 000 cas, pr\'{e}sent\'{e} sous la forme :
 
 %==== image ====
@@ -691,7 +691,9 @@ Tous ces ustensiles pourraient se r\'{e}v\'{e}ler \^{e}tre plus qu'efficace dans
   \bibitem{1} Wikipedia Correction and Paraphrase Corpus \url{https://wicopaco.limsi.fr}
   \bibitem{2} Graph Rewriting for Natural Language Processing \url{http://grew.fr}
   \bibitem{3} Laboratoire d'informatique pour la m\'{e}canique et les sciences de l'ing\'{e}nieur \url{https://www.limsi.fr/fr/}
-  
+  \bibitem{4} Travaux effectu\'{e}s sur le fichier contenant les 400 000 entr\'{e}es \url{https://wicopaco.limsi.fr/pub/taln10.pdf}
 \end{thebibliography}
+[5] Rapport r\'{e}pertoriant un grand nombre de fautes et leurs d\'{e}finition \url{https://wicopaco.limsi.fr/pub/typologie-modifications-wikipedia.pdf}
+
 \end{document}
 
