declaration contre le plagiat

--- a/rapport/CompteRendu.tex
+++ b/rapport/CompteRendu.tex
@@ -682,10 +682,9 @@ De plus il reste de nombreuses pistes que nous n'avons malheureusement pas eu le
 Tous ces ustensiles pourraient se r\'{e}v\'{e}ler \^{e}tre plus qu'efficace dans la confection de cette base de cas qui est essentielle pour le bon fonctionnement du correcteur de fran\c{c}ais fonctionnant sur un syst\`{e}me de raisonnement \`{a} partir de cas.  
 
 
-
 %========Conclusion=======
 
-
+\cleardoublepage
 %======biblio======
 \begin{thebibliography}{1}
   \bibitem{1} Wikipedia Correction and Paraphrase Corpus \url{https://wicopaco.limsi.fr}
@@ -694,6 +693,89 @@ Tous ces ustensiles pourraient se r\'{e}v\'{e}ler \^{e}tre plus qu'efficace dans
   \bibitem{4} Travaux effectu\'{e}s sur le fichier contenant les 400 000 entr\'{e}es \url{https://wicopaco.limsi.fr/pub/taln10.pdf}
 \end{thebibliography}
 [5] Rapport r\'{e}pertoriant un grand nombre de fautes et leurs d\'{e}finition \url{https://wicopaco.limsi.fr/pub/typologie-modifications-wikipedia.pdf}
+
+
+\cleardoublepage
+%==== non plagiat ====
+\begin{flushleft}
+\includegraphics[width=6cm]{UL_LOGO.jpg} %l'image est retaill\'ee pour avoir une largeur de 10cm
+\end{flushleft}
+
+\vspace*{15mm}
+\begin{center}
+	{\bfseries \huge D\'{e}claration sur l'honneur contre le plagiat}
+\end{center}
+\vspace*{30mm}
+Je soussign\'{e}(e) Klein Christopher
+\newline
+R\'{e}guli\`{e}rement inscrit \`{a} l'Universit\'{e} de Lorraine
+\newline
+Num de carte d'\'{e}tudiant : 31520124
+\newline
+Ann\'{e}e universitaire : 2018-2019
+\newline
+Niveau d'\'{e}tudes : M1
+\newline
+Parcours : Informatique
+\newline
+Num UE : ........................................................................
+\newline
+\newline
+Certifie qu'il s'agit d'un travail original et que toutes les sources utilis\'{e}es ont \'{e}t\'{e} indiqu\'{e}es dans leur totalit\'{e}. Je certifie, de surcro\^{i}t, que je n'ai ni recopi\'{e} ni utilis\'{e} des id\'{e}es ou des formulations tir\'{e}es d'un ouvrage, article ou m\'{e}moire, en version imprim\'{e}e ou \'{e}lectronique, sans mentionner pr\'{e}cis\'{e}ment leur origine et que les citations int\'{e}grales sont signal\'{e}es entre guillemets.
+\newline
+\newline
+Conform\'{e}ment \`{a} la loi, le non-respect de ces dispositions me rend passible de poursuites devant la commission disciplinaire et les tribunaux de la R\'{e}publique Française.
+\vspace*{20mm}
+\begin{center}
+Fait \`{a}                                                       , le ...............................................
+\end{center}
+\vspace*{15mm}
+\begin{flushright}
+ Signature :  \,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,
+\end{flushright}
+
+\cleardoublepage
+%==== non plagiat ====
+\begin{flushleft}
+\includegraphics[width=6cm]{UL_LOGO.jpg} %l'image est retaill\'ee pour avoir une largeur de 10cm
+\end{flushleft}
+
+\vspace*{15mm}
+\begin{center}
+	{\bfseries \huge D\'{e}claration sur l'honneur contre le plagiat}
+\end{center}
+\vspace*{30mm}
+Je soussign\'{e}(e) Ginestra Alex
+\newline
+R\'{e}guli\`{e}rement inscrit \`{a} l'Universit\'{e} de Lorraine
+\newline
+Num de carte d'\'{e}tudiant : 31500632
+\newline
+Ann\'{e}e universitaire : 2018-2019
+\newline
+Niveau d'\'{e}tudes : M1
+\newline
+Parcours : Informatique
+\newline
+Num UE : ........................................................................
+\newline
+\newline
+Certifie qu'il s'agit d'un travail original et que toutes les sources utilis\'{e}es ont \'{e}t\'{e} indiqu\'{e}es dans leur totalit\'{e}. Je certifie, de surcro\^{i}t, que je n'ai ni recopi\'{e} ni utilis\'{e} des id\'{e}es ou des formulations tir\'{e}es d'un ouvrage, article ou m\'{e}moire, en version imprim\'{e}e ou \'{e}lectronique, sans mentionner pr\'{e}cis\'{e}ment leur origine et que les citations int\'{e}grales sont signal\'{e}es entre guillemets.
+\newline
+\newline
+Conform\'{e}ment \`{a} la loi, le non-respect de ces dispositions me rend passible de poursuites devant la commission disciplinaire et les tribunaux de la R\'{e}publique Française.
+\vspace*{20mm}
+\begin{center}
+Fait \`{a}                                                       , le ...............................................
+\end{center}
+\vspace*{15mm}
+\begin{flushright}
+ Signature :  \,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,
+\end{flushright}
+
+
+
+
 
 \end{document}
 
