--- a/rapport/CompteRendu.tex
+++ b/rapport/CompteRendu.tex
@@ -380,7 +380,7 @@ Pour commencer, nous examinions le contenu du fichier WiCoPaCo dans le but de tr
 Ensuite, une fois le filtre d\'{e}velopp\'{e}, une multitude de tests devait \^{e}tre effectu\'{e}e afin de s'assurer que celui-ci \'{e}tait bien fonctionnel. Nous ex\'{e}cutions donc le filtre sur un extrait du fichier de WiCoPaCo contenant quelques centaines de cas, et nous observions ceux rejet\'{e}s. Si le filtre se comportait comme nous l'attendions sur cette base test de taille r\'{e}duite, nous consid\'{e}rions que le filtre \'{e}tait fonctionnel. Si le r\'{e}sultat se r\'{e}v\'{e}lait \^{e}tre imparfait, nous entreprenions un ajustement de la r\`{e}gle jusqu'\`{a} obtention du r\'{e}sultat escompt\'{e}. 
 \newline
 \newline
-Puis, une fois le filtre op\'{e}rationnel, une analyse statistique de son ex\'{e}cution, appliqu\'{e} avec les autres filtres d\'{e}j\`{a} existant, sur le fichier entier \'{e}tait effectu\'{e}e. Le but de la d\'{e}marche \'{e}tait de d\'{e}montrer l'utilit\'{e} de ce dernier malgr\'{e} l'existence d'autres filtres. Si les r\'{e}sultats statistiques attestaient de l'int\'{e}r\^{e}t du filtre, alors ce dernier \'{e}tait accept\'{e} et ajout\'{e} au projet.
+Puis, une fois le filtre op\'{e}rationnel, une analyse statistique de son ex\'{e}cution, coupl\'{e}e avec les filtres d\'{e}j\`{a} existant, \'{e}tait effectu\'{e}e. Le but de la d\'{e}marche \'{e}tait de d\'{e}montrer l'utilit\'{e} de ce dernier malgr\'{e} l'existence d'autres filtres. Si les r\'{e}sultats statistiques attestaient de l'int\'{e}r\^{e}t du filtre, alors ce dernier \'{e}tait accept\'{e} et ajout\'{e} au projet.
 \newline
 \newline
 Enfin, nous appliquions tous les filtres sur les quelques 400 000 cas et entreprenions une nouvelle analyse sur le fichier de sortie du logiciel en qu\^{e}te de cas ne correspondant pas \`{a} nos crit\`{e}res pour recommencer le protocole. Le fonctionnement de chacun de ces filtres sera d\'{e}taill\'{e} plus bas (cf. partie 2.3).
