--- a/rapport/CompteRendu.tex
+++ b/rapport/CompteRendu.tex
@@ -666,7 +666,7 @@ Dans cette partie nous allons pr\'{e}senter les r\'{e}sultats finaux de nos d\'{
 	La base de cas bruit\'{e}e choisie a \'{e}t\'{e} WiCoPaCo, sur laquelle nous avons appliqu\'{e} des filtres pour l'\'{e}pur\'{e}e. Apr\`{e}s le d\'{e}veloppement de plusieurs filtres ainsi qu'avec l'aide d'une \'{e}tude faite sur cette m\^{e}me base de cas, nous avons effectu\'{e} une s\'{e}rie de tests pour regarder l'efficacit\'{e} et la commutativit\'{e} des filtres et nous en avons d\'{e}duit la meilleure ex\'{e}cution possible. D'apr\`{e}s les tests effectu\'{e}s ci-dessus, nous arrivons \`{a} la conclusion que le meilleur ordonnancement de filtres est le celui-ci : 
 \newline
 \newline
-Premi\`{e}rement, nous devons  ex\'{e}cuter nos filtres de la cat\'{e}gorie <<\'LocalRejector\,>> puis nos filtres <<\'GlobalRejector\,>>. Cette ordre importe peu en ce qui concerne la qualit\'{e} des cas enlev\'{e}s mais permet de gagner du temps lors de l'ex\'{e}cution de notre programme. Deuxi\`{e}mement, nous devons lancer le filtre cr\'{e}\'{e} \`{a} partir du travail des chercheurs de LIMSI. Nous appliquons ce filtre apr\`{e}s les nôtres et non avant car le travail effectu\'{e} par le groupe du LIMSI supprime des cas dont nos filtres ont besoin pour effectuer correctement leurs travail.
+Premi\`{e}rement, nous devons  ex\'{e}cuter nos filtres de la cat\'{e}gorie <<\,LocalRejector\,>> puis nos filtres <<\,GlobalRejector\,>>. Cette ordre importe peu en ce qui concerne la qualit\'{e} des cas enlev\'{e}s mais permet de gagner du temps lors de l'ex\'{e}cution de notre programme. Deuxi\`{e}mement, nous devons lancer le filtre cr\'{e}\'{e} \`{a} partir du travail des chercheurs de LIMSI. Nous appliquons ce filtre apr\`{e}s les n\^{o}tres et non avant car le travail effectu\'{e} par le groupe du LIMSI supprime des cas dont nos filtres ont besoin pour effectuer correctement leurs travail.
 \newline
 \newline
 En suivant cet ordre, nous arrivons \`{a} enlever 338 588 cas, soit \`{a} peu pr\`{e}s 82,82\% des cas. Bien que 4 cas sur 5 soient enlev\'{e}s de la base de cas, il reste tout de m\^{e}me 70 228 cas, ce qui est largement suffisant pour cr\'{e}er une base de cas. Cependant, l'utilisation du travail effectu\'{e} par les chercheurs de LIMSI n'est pas appropri\'{e} \`{a} notre travail de recherche, qui consiste \`{a} cr\'{e}er des outils permettant de nettoyer une base de cas bruit\'{e}e. Dans le cas ou une base de cas autre que WiCoPaCo serait utilis\'{e}, leurs travail n'apporterait aucune information. 
@@ -680,7 +680,7 @@ En l'enlevant de notre processus, et en ne gardant que les filtres cr\'{e}\'{e}s
 Au cours de cette recherche, nous nous sommes heurt\'{e}s \`{a} de nombreuses difficult\'{e}s comme la recherche et l'utilisation de travaux existants, la complexit\'{e} de la langue fran\c{c}aise face \`{a} la cat\'{e}gorisation des diff\'{e}rentes erreurs, ou encore la mise en place de certains filtres qui n\'{e}cessitaient un certains calibrage comme le filtre <<\,EstheticalRestructurationRejector\,>>.
 \newline
 \newline
-Cependant il reste beaucoup \`{a} faire, ne serait-ce que d'approfondir le filtrage des erreurs sur la base de cas de WiCoPaCo, et s'assurer qu'il ne reste plus d'erreurs dans les cas r\'{e}sultants. Car malgr\'{e} les filtres d\'{e}velopp\'{e}s \`{a} l'aide de notre protocole, nous n'avons pas eu le temps de traiter l'enti\`{e}ret\'{e} du fichier de WiCoPaCo et donc de supprimer toutes les erreurs de celui-ci. Il reste donc d'autres filtres \`{a} impl\'{e}menter pour permettre \`{a} ce sujet de recherche d'atteindre sa finalit\'{e}. De plus, nous nous sommes uniquement int\'{e}ress\'{e}s aux fichiers du site WiCoPaCo qui f\^{u}t trouv\'{e} par les \'{e}tudiants nous ayant pr\'{e}c\'{e}d\'{e}s. Il existe donc peut \^{e}tre d'autres recueils de cas d'erreurs de français \`{a} \'{e}tudier. 
+Cependant il reste beaucoup \`{a} faire, ne serait-ce que d'approfondir le filtrage des erreurs sur la base de cas de WiCoPaCo, et s'assurer qu'il ne reste plus d'erreurs dans les cas r\'{e}sultants. Car malgr\'{e} les filtres d\'{e}velopp\'{e}s \`{a} l'aide de notre protocole, nous n'avons pas eu le temps de traiter l'enti\`{e}ret\'{e} du fichier de WiCoPaCo et donc de supprimer toutes les erreurs de celui-ci. Il reste donc d'autres filtres \`{a} impl\'{e}menter pour permettre \`{a} ce sujet de recherche d'atteindre sa finalit\'{e}. De plus, nous nous sommes uniquement int\'{e}ress\'{e}s aux fichiers du site WiCoPaCo qui f\^{u}t trouv\'{e} par les \'{e}tudiants nous ayant pr\'{e}c\'{e}d\'{e}s. Il existe donc peut \^{e}tre d'autres recueils de cas d'erreurs de fran\c{c}ais \`{a} \'{e}tudier. 
 \newline
 \newline
 Par ailleurs, il reste de nombreuses pistes que nous n'avons malheureusement pas eu le temps d'explorer, comme la cr\'{e}ation d'outils de collecte automatiques, ou la mise en place de jeu interactif ayant pour but cach\'{e} de faire corriger des fautes \`{a} au joueur. 
@@ -731,16 +731,16 @@ Niveau d'\'{e}tudes : M1
 \newline
 Parcours : Informatique
 \newline
-Num UE : ........................................................................
+Num UE : 811
 \newline
 \newline
 Certifie qu'il s'agit d'un travail original et que toutes les sources utilis\'{e}es ont \'{e}t\'{e} indiqu\'{e}es dans leur totalit\'{e}. Je certifie, de surcro\^{i}t, que je n'ai ni recopi\'{e} ni utilis\'{e} des id\'{e}es ou des formulations tir\'{e}es d'un ouvrage, article ou m\'{e}moire, en version imprim\'{e}e ou \'{e}lectronique, sans mentionner pr\'{e}cis\'{e}ment leur origine et que les citations int\'{e}grales sont signal\'{e}es entre guillemets.
 \newline
 \newline
-Conform\'{e}ment \`{a} la loi, le non-respect de ces dispositions me rend passible de poursuites devant la commission disciplinaire et les tribunaux de la R\'{e}publique Française.
+Conform\'{e}ment \`{a} la loi, le non-respect de ces dispositions me rend passible de poursuites devant la commission disciplinaire et les tribunaux de la R\'{e}publique Fran\c{c}aise.
 \vspace*{20mm}
 \begin{center}
-Fait \`{a}                                                       , le ...............................................
+Fait \`{a}  Nancy , le 13/05/2019
 \end{center}
 \vspace*{15mm}
 \begin{flushright}
@@ -770,16 +770,16 @@ Niveau d'\'{e}tudes : M1
 \newline
 Parcours : Informatique
 \newline
-Num UE : ........................................................................
+Num UE : 811
 \newline
 \newline
 Certifie qu'il s'agit d'un travail original et que toutes les sources utilis\'{e}es ont \'{e}t\'{e} indiqu\'{e}es dans leur totalit\'{e}. Je certifie, de surcro\^{i}t, que je n'ai ni recopi\'{e} ni utilis\'{e} des id\'{e}es ou des formulations tir\'{e}es d'un ouvrage, article ou m\'{e}moire, en version imprim\'{e}e ou \'{e}lectronique, sans mentionner pr\'{e}cis\'{e}ment leur origine et que les citations int\'{e}grales sont signal\'{e}es entre guillemets.
 \newline
 \newline
-Conform\'{e}ment \`{a} la loi, le non-respect de ces dispositions me rend passible de poursuites devant la commission disciplinaire et les tribunaux de la R\'{e}publique Française.
+Conform\'{e}ment \`{a} la loi, le non-respect de ces dispositions me rend passible de poursuites devant la commission disciplinaire et les tribunaux de la R\'{e}publique Fran\c{c}aise.
 \vspace*{20mm}
 \begin{center}
-Fait \`{a}                                                       , le ...............................................
+Fait \`{a}  Nancy , le 13/05/2019
 \end{center}
 \vspace*{15mm}
 \begin{flushright}
