--- a/rapport/CompteRendu.tex
+++ b/rapport/CompteRendu.tex
@@ -53,7 +53,7 @@
 \vfill\null\columnbreak
 \begin{multicols}{2}
 	\begin{flushright}
-		\`{E}quipe :
+		\'{E}quipes :
 	\end{flushright}
 	\begin{flushright}
 		Encadrants :
@@ -66,8 +66,7 @@
 \end{multicols}
 \cleardoublepage
 \cleardoublepage
-
-
+\cleardoublepage
 %=====Decharge de responsabilite=====
 \thispagestyle{empty}
 \begin{center}
@@ -90,7 +89,7 @@ Tout d'abord, nous tenons \`{a} remercier toute l'\'{e}quipe p\'{e}dagogique du 
 \newline
 De plus, nous remercions toutes les personnes qui ont contribu\'{e} au bon d\'{e}roulement de notre travail et qui nous ont aid\'{e} lors de la r\'{e}daction de ce rapport. Premi\`{e}rement, nous adressons nos remerciements \`{a} notre professeur, Madame Marie-Laure Alves, qui nous a beaucoup aid\'{e}s. Son \'{e}coute et ses conseils nous ont permis de progresser dans notre d\'{e}marche.
 \newline
-Nous tenons \'{e}galement \`{a} remercier vivement notre encadrant, Monsieur Jean Lieber, enseignant chercheur au LORIA, pour son accueil, le temps pass\'{e} ensemble et le partage de son expertise au quotidien. Nous remercions \'{e}galement toute l'\'{e}quipe K et l'\'{e}quipe S\'{e}magramme pour leur accueil et leur disponibilit\'{e}, et en particulier Monsieur Emmanuel Nauer, qui nous a beaucoup aid\'{e} \`{a} comprendre les probl\'{e}matiques de recherche sur lesquelles nous travaillions. Enfin, nous tenons \`{a} remercier toutes les personnes qui nous ont conseill\'{e}s et relus lors de la r\'{e}daction de ce rapport : nos familles, nos professeurs et aussi nos camarades de cours.
+Nous tenons \'{e}galement \`{a} remercier vivement notre encadrant, Monsieur Jean Lieber, enseignant chercheur au LORIA[\cite[1]{1}], pour son accueil, le temps pass\'{e} ensemble et le partage de son expertise au quotidien. Nous remercions \'{e}galement toute l'\'{e}quipe K et l'\'{e}quipe S\'{e}magramme pour leur accueil et leur disponibilit\'{e}, et en particulier Monsieur Emmanuel Nauer, qui nous a beaucoup aid\'{e} \`{a} comprendre les probl\'{e}matiques de recherche sur lesquelles nous travaillions. Enfin, nous tenons \`{a} remercier toutes les personnes qui nous ont conseill\'{e}s et relus lors de la r\'{e}daction de ce rapport : nos familles, nos professeurs et aussi nos camarades de cours.
 
 \cleardoublepage
 
@@ -211,7 +210,7 @@ Nous voyons donc qu'il est possible de r\'{e}soudre des probl\`{e}mes gr\^{a}ce 
 Une premi\`{e}re piste nous a \'{e}t\'{e} fournie par un groupe d'\'{e}tudiants de L3 de 2017-2018 compos\'{e} de M. Giang, M. Levy et M. Ly, qui avait travaill\'{e} sur un projet intitul\'{e} Corrector. Le projet consistait \`{a} faire un site WEB capable d'apporter une correction \`{a} une phrase erron\'{e}e donn\'{e}e en entr\'{e}e. Cette correction devait se faire \`{a} l'aide d'une base de cas qui pouvait s'enrichir avec des interactions humaines (utilisateur/administrateur du site). 
 \newline
 \newline
-Notre d\'{e}but d'\'{e}tude a donc \'{e}t\'{e} guid\'{e} par les moyens mis en {\oe}uvre pour effectuer un remplissage automatique de leur base de cas initiale, et plus particuli\`{e}rement un : les corpus de WiCoPaCo [\cite[1]{1}]. Le site WiCoPaCo met en libre acc\`{e}s des fichiers au format XML contenant des phrases, ou parties de phrases avec une correction effectu\'{e}e ainsi qu'un commentaire \'{e}ventuel laiss\'{e} par l'auteur de la correction. Ces fichiers sont le r\'{e}sultat des corrections faites par les administrateurs des pages Wikip\'{e}dia, ce qui n\'{e}cessite une correction \'{e}tant donn\'{e} que le contenu des pages est apport\'{e} par des utilisateurs. Les fichiers en question contiennent donc des centaines de milliers de cas compos\'{e}s de la mani\`{e}re suivante : le groupe de phrases avant modification avec la mise en \'{e}vidence de la faute, suivi du m\^{e}me groupe de phrases avec la correction apport\'{e}e \'{e}galement mise en \'{e}vidence. 
+Notre d\'{e}but d'\'{e}tude a donc \'{e}t\'{e} guid\'{e} par les moyens mis en {\oe}uvre pour effectuer un remplissage automatique de leur base de cas initiale, et plus particuli\`{e}rement un : les corpus de WiCoPaCo [\cite[2]{2}]. Le site WiCoPaCo met en libre acc\`{e}s des fichiers au format XML contenant des phrases, ou parties de phrases avec une correction effectu\'{e}e ainsi qu'un commentaire \'{e}ventuel laiss\'{e} par l'auteur de la correction. Ces fichiers sont le r\'{e}sultat des corrections faites par les administrateurs des pages Wikip\'{e}dia, ce qui n\'{e}cessite une correction \'{e}tant donn\'{e} que le contenu des pages est apport\'{e} par des utilisateurs. Les fichiers en question contiennent donc des centaines de milliers de cas compos\'{e}s de la mani\`{e}re suivante : le groupe de phrases avant modification avec la mise en \'{e}vidence de la faute, suivi du m\^{e}me groupe de phrases avec la correction apport\'{e}e \'{e}galement mise en \'{e}vidence. 
 \newline
 \newline
 L'int\'{e}r\^{e}t principal de ces fichiers \'{e}tant l'\'{e}norme masse de donn\'{e}es qu'ils contiennent, nous permettant ainsi d'en extraire un grand nombre de cas. Cependant, m\^{e}me si cette solution semble \^{e}tre id\'{e}ale et simple \`{a} mettre en place, il s'av\`{e}re qu'elle est loin d'\^{e}tre parfaite. Le probl\`{e}me de ces corrections est qu'une partie se trouve \^{e}tre des corrections de contenu, une autre \'{e}tant des reformulations, et bien d'autres types de corrections n'\'{e}tant pas des erreurs de fran\c{c}ais mais sont pourtant contenues dans ces fichiers. La probl\'{e}matique de l'\'{e}puration de cette \'{e}norme masse de donn\'{e}es se pose donc.
@@ -245,7 +244,7 @@ Suite \`{a} la mise en place de notre sujet, nous nous sommes donc concentr\'{e}
 
 %===== 1ere sous sous partie ====
 \subsubsection{Grew}
-Le premier de nos deux axes \'{e}tait la d\'{e}couverte d'un outil permettant l'analyse des phrases pour en trouver les potentielles fautes de fran\c{c}ais. Pour cela, nos encadrants nous ont orient\'{e}s vers GREW [\cite[2]{2}], un logiciel dont un de nos encadrants, Bruno Guillaume, conna\^{i}t bien le fonctionnement. Ce logiciel permet, \`{a} partir d'une ou plusieurs phrases donn\'{e}es en param\`{e}tre, de construire un graphe \`{a} partir des lemmes de chaque mot ainsi que gr\^{a}ce au contexte des phrases. Ce graphe permet de d\'{e}duire les liens que chaque mot entretient avec les autres mots de la phrase. Voici un exemple de graphe que cr\'{e}e l'outil GREW \`{a} partir de la phrase <<\,C'est une femme tr\`{e}s intelligente.\,>>
+Le premier de nos deux axes \'{e}tait la d\'{e}couverte d'un outil permettant l'analyse des phrases pour en trouver les potentielles fautes de fran\c{c}ais. Pour cela, nos encadrants nous ont orient\'{e}s vers GREW [\cite[3]{3}], un logiciel dont un de nos encadrants, Bruno Guillaume, conna\^{i}t bien le fonctionnement. Ce logiciel permet, \`{a} partir d'une ou plusieurs phrases donn\'{e}es en param\`{e}tre, de construire un graphe \`{a} partir des lemmes de chaque mot ainsi que gr\^{a}ce au contexte des phrases. Ce graphe permet de d\'{e}duire les liens que chaque mot entretient avec les autres mots de la phrase. Voici un exemple de graphe que cr\'{e}e l'outil GREW \`{a} partir de la phrase <<\,C'est une femme tr\`{e}s intelligente.\,>>
 
 %==== image ====
 \begin{center}
@@ -464,7 +463,7 @@ Ce filtre n'a d'int\'{e}r\^{e}t que s'il est appliqu\'{e} apr\`{e}s le filtre <<
 %===== 4eme sous sous partie ====
 \subsubsection{Travail effectu\'{e} par LIMSI}
 
-Gr\^{a}ce \`{a} nos recherches effectu\'{e}es sur WiCoPaCo, nous avons pu trouver des travaux[\cite[4]{4}] effectu\'{e}s par des chercheurs du LIMSI[\cite[3]{3}]. Ces travaux \autocite[1]{https://wicopaco.limsi.fr/pub/taln10.pdf} leurs ont permis d'extraire automatiquement des fichiers XML de WiCoPaCo un corpus d'erreurs compos\'{e} de 72 483 erreurs lexicales et 74 100 erreurs grammaticales. Leurs r\'{e}sultats peuvent \^{e}tre extraits 
+Gr\^{a}ce \`{a} nos recherches effectu\'{e}es sur WiCoPaCo, nous avons pu trouver des travaux[\cite[4]{4}] effectu\'{e}s par des chercheurs du LIMSI[\cite[5]{5}]. Ces travaux \autocite[1]{https://wicopaco.limsi.fr/pub/taln10.pdf} leurs ont permis d'extraire automatiquement des fichiers XML de WiCoPaCo un corpus d'erreurs compos\'{e} de 72 483 erreurs lexicales et 74 100 erreurs grammaticales. Leurs r\'{e}sultats peuvent \^{e}tre extraits 
 \`{a} partir d'un fichier XML regroupant les 150 000 cas, pr\'{e}sent\'{e} sous la forme :
 
 %==== image ====
@@ -654,7 +653,7 @@ Filtre RollbackFilter & 85 358 / 213 137 & 40\% \tabularnewline
 \end{center}
 Il en r\'{e}sulte un fichier de 70 228 cas.
 \newline
-On constate que ici, l'ordre des filtres a son importance et nous pouvons \'{e}mettre l'hypoth\`{e}se que cela provient du RollbackFilter, puisque si la s\'{e}lection effectu\'{e}e par l'\'{e}quipe de chercheurs du LIMSI enl\`{e}ve un cas A qui devient B, mais ne retire pas le cas o\`{(u} B redevient A, alors notre filtre ne pourra pas d\'{e}tecter le retour sur correction.
+On constate qu'ici, l'ordre des filtres a son importance et nous pouvons \'{e}mettre l'hypoth\`{e}se que cela provient du RollbackFilter, puisque si la s\'{e}lection effectu\'{e}e par l'\'{e}quipe de chercheurs du LIMSI enl\`{e}ve un cas A qui devient B, mais ne retire pas le cas o\`{u} B redevient A, alors notre filtre ne pourra pas d\'{e}tecter le retour sur correction.
 Donc, il est crucial de noter que l'ordre de filtrage a son importance car les deux filtrages ne sont pas commutatifs, mais \'{e}galement que nos travaux permettent une \'{e}puration additionnelle \`{a} leur s\'{e}lection.
 
 
@@ -663,13 +662,13 @@ Donc, il est crucial de noter que l'ordre de filtrage a son importance car les d
 Dans cette partie nous allons pr\'{e}senter les r\'{e}sultats finaux de nos d\'{e}veloppements. Notre sujet consistait \`{a} obtenir une base de cas correcte en appliquant des filtres sur une base de donn\'{e}es bruit\'{e}e. Ces filtres permettraient donc de nettoyer cette base de cas.
 \newline
 \newline
-	La base de cas bruit\'{e}e choisie a \'{e}t\'{e} WiCoPaCo, sur laquelle nous avons appliqu\'{e} des filtres pour l'\'{e}pur\'{e}e. Apr\`{e}s le d\'{e}veloppement de plusieurs filtres ainsi qu'avec l'aide d'une \'{e}tude faite sur cette m\^{e}me base de cas, nous avons effectu\'{e} une s\'{e}rie de tests pour regarder l'efficacit\'{e} et la commutativit\'{e} des filtres et nous en avons d\'{e}duit la meilleure ex\'{e}cution possible. D'apr\`{e}s les tests effectu\'{e}s ci-dessus, nous arrivons \`{a} la conclusion que le meilleur ordonnancement de filtres est le celui-ci : 
+	La base de cas bruit\'{e}e choisie a \'{e}t\'{e} WiCoPaCo, sur laquelle nous avons appliqu\'{e} des filtres pour l'\'{e}purer. Apr\`{e}s le d\'{e}veloppement de plusieurs filtres ainsi qu'avec l'aide d'une \'{e}tude faite sur cette m\^{e}me base de cas, nous avons effectu\'{e} une s\'{e}rie de tests pour regarder l'efficacit\'{e} et la commutativit\'{e} des filtres et nous en avons d\'{e}duit la meilleure ex\'{e}cution possible. D'apr\`{e}s les tests effectu\'{e}s ci-dessus, nous arrivons \`{a} la conclusion que le meilleur ordonnancement de filtres est le suivant : 
 \newline
 \newline
-Premi\`{e}rement, nous devons  ex\'{e}cuter nos filtres de la cat\'{e}gorie <<\,LocalRejector\,>> puis nos filtres <<\,GlobalRejector\,>>. Cette ordre importe peu en ce qui concerne la qualit\'{e} des cas enlev\'{e}s mais permet de gagner du temps lors de l'ex\'{e}cution de notre programme. Deuxi\`{e}mement, nous devons lancer le filtre cr\'{e}\'{e} \`{a} partir du travail des chercheurs de LIMSI. Nous appliquons ce filtre apr\`{e}s les n\^{o}tres et non avant car le travail effectu\'{e} par le groupe du LIMSI supprime des cas dont nos filtres ont besoin pour effectuer correctement leurs travail.
+Premi\`{e}rement, nous devons  ex\'{e}cuter nos filtres de la cat\'{e}gorie <<\,LocalRejector\,>> puis nos filtres <<\,GlobalRejector\,>>. Cet ordre importe peu en ce qui concerne la qualit\'{e} des cas enlev\'{e}s mais permet de gagner du temps lors de l'ex\'{e}cution de notre programme. Deuxi\`{e}mement, nous devons lancer le filtre cr\'{e}\'{e} \`{a} partir du travail des chercheurs de LIMSI. Nous appliquons ce filtre apr\`{e}s les n\^{o}tres et non avant car le travail effectu\'{e} par le groupe du LIMSI supprime des cas dont nos filtres ont besoin pour effectuer correctement leur t\^{a}che.
 \newline
 \newline
-En suivant cet ordre, nous arrivons \`{a} enlever 338 588 cas, soit \`{a} peu pr\`{e}s 82,82\% des cas. Bien que 4 cas sur 5 soient enlev\'{e}s de la base de cas, il reste tout de m\^{e}me 70 228 cas, ce qui est largement suffisant pour cr\'{e}er une base de cas. Cependant, l'utilisation du travail effectu\'{e} par les chercheurs de LIMSI n'est pas appropri\'{e} \`{a} notre travail de recherche, qui consiste \`{a} cr\'{e}er des outils permettant de nettoyer une base de cas bruit\'{e}e. Dans le cas ou une base de cas autre que WiCoPaCo serait utilis\'{e}, leurs travail n'apporterait aucune information. 
+En suivant cet ordre, nous arrivons \`{a} enlever 338 588 cas, soit \`{a} peu pr\`{e}s 82,82\% des cas. Bien que 4 cas sur 5 soient enlev\'{e}s de la base de cas, il reste tout de m\^{e}me 70 228 cas, ce qui est largement suffisant pour cr\'{e}er une base de cas. Cependant, l'utilisation du travail effectu\'{e} par les chercheurs de LIMSI n'est pas appropri\'{e} \`{a} notre travail de recherche, qui consiste \`{a} cr\'{e}er des outils permettant de nettoyer une base de cas bruit\'{e}e. Dans le cas ou une base de cas autre que WiCoPaCo serait utilis\'{e}, leur travail n'apporterait aucune information. 
 \newline
 \newline
 En l'enlevant de notre processus, et en ne gardant que les filtres cr\'{e}\'{e}s par nos soins, nous enlevons 281 037 cas, soit environ 68,74\% des cas. Le pourcentage de cas enlev\'{e}s est donc moindre quant \`{a} la pr\'{e}c\'{e}dente utilisation. Cependant,  nous pouvons esp\'{e}rer que l'utilisation de notre logiciel WiCorrector sur une base de cas bruit\'{e}e autre que WiCoPaCo permettra de supprimer une majorit\'{e} de cas erron\'{e}s.
@@ -677,13 +676,13 @@ En l'enlevant de notre processus, et en ne gardant que les filtres cr\'{e}\'{e}s
 
 %===== 3eme sous partie ====
 \subsection{Le devenir de nos recherches}
-Au cours de cette recherche, nous nous sommes heurt\'{e}s \`{a} de nombreuses difficult\'{e}s comme la recherche et l'utilisation de travaux existants, la complexit\'{e} de la langue fran\c{c}aise face \`{a} la cat\'{e}gorisation des diff\'{e}rentes erreurs, ou encore la mise en place de certains filtres qui n\'{e}cessitaient un certains calibrage comme le filtre <<\,EstheticalRestructurationRejector\,>>.
+Au cours de cette recherche, nous nous sommes heurt\'{e}s \`{a} de nombreuses difficult\'{e}s comme la recherche et l'utilisation de travaux existants, la complexit\'{e} de la langue fran\c{c}aise face \`{a} la cat\'{e}gorisation des diff\'{e}rentes erreurs, ou encore la mise en place de certains filtres qui n\'{e}cessitaient un certain calibrage comme le filtre <<\,EstheticalRestructurationRejector\,>>.
 \newline
 \newline
 Cependant il reste beaucoup \`{a} faire, ne serait-ce que d'approfondir le filtrage des erreurs sur la base de cas de WiCoPaCo, et s'assurer qu'il ne reste plus d'erreurs dans les cas r\'{e}sultants. Car malgr\'{e} les filtres d\'{e}velopp\'{e}s \`{a} l'aide de notre protocole, nous n'avons pas eu le temps de traiter l'enti\`{e}ret\'{e} du fichier de WiCoPaCo et donc de supprimer toutes les erreurs de celui-ci. Il reste donc d'autres filtres \`{a} impl\'{e}menter pour permettre \`{a} ce sujet de recherche d'atteindre sa finalit\'{e}. De plus, nous nous sommes uniquement int\'{e}ress\'{e}s aux fichiers du site WiCoPaCo qui f\^{u}t trouv\'{e} par les \'{e}tudiants nous ayant pr\'{e}c\'{e}d\'{e}s. Il existe donc peut \^{e}tre d'autres recueils de cas d'erreurs de fran\c{c}ais \`{a} \'{e}tudier. 
 \newline
 \newline
-Par ailleurs, il reste de nombreuses pistes que nous n'avons malheureusement pas eu le temps d'explorer, comme la cr\'{e}ation d'outils de collecte automatiques, ou la mise en place de jeu interactif ayant pour but cach\'{e} de faire corriger des fautes \`{a} au joueur. 
+Par ailleurs, il reste de nombreuses pistes que nous n'avons malheureusement pas eu le temps d'explorer, comme la cr\'{e}ation d'outils de collecte automatiques, ou la mise en place de jeu interactif ayant pour but cach\'{e} de faire corriger des fautes au joueur. 
 \newline
 \newline
 Tous ces ustensiles pourraient se r\'{e}v\'{e}ler \^{e}tre plus qu'efficace dans la confection de cette base de cas qui est essentielle pour le bon fonctionnement du correcteur de fran\c{c}ais fonctionnant sur un syst\`{e}me de raisonnement \`{a} partir de cas.  
@@ -700,12 +699,13 @@ Tous ces ustensiles pourraient se r\'{e}v\'{e}ler \^{e}tre plus qu'efficace dans
 \cleardoublepage
 %======biblio======
 \begin{thebibliography}{1}
-  \bibitem{1} Wikipedia Correction and Paraphrase Corpus \url{https://wicopaco.limsi.fr}
-  \bibitem{2} Graph Rewriting for Natural Language Processing \url{http://grew.fr}
-  \bibitem{3} Laboratoire d'informatique pour la m\'{e}canique et les sciences de l'ing\'{e}nieur \url{https://www.limsi.fr/fr/}
+\bibitem{1} Laboratoire lorrain de recherche en informatique et ses applications \url{http://www.loria.fr/fr/}
+  \bibitem{2} Wikipedia Correction and Paraphrase Corpus \url{https://wicopaco.limsi.fr}
+  \bibitem{3} Graph Rewriting for Natural Language Processing \url{http://grew.fr}
   \bibitem{4} Travaux effectu\'{e}s sur le fichier contenant les 400 000 entr\'{e}es \url{https://wicopaco.limsi.fr/pub/taln10.pdf}
+    \bibitem{5} Laboratoire d'informatique pour la m\'{e}canique et les sciences de l'ing\'{e}nieur \url{https://www.limsi.fr/fr/}
 \end{thebibliography}
-[5] Rapport r\'{e}pertoriant un grand nombre de fautes et leurs d\'{e}finition \url{https://wicopaco.limsi.fr/pub/typologie-modifications-wikipedia.pdf}
+[6] Rapport r\'{e}pertoriant un grand nombre de fautes et leurs d\'{e}finition \url{https://wicopaco.limsi.fr/pub/typologie-modifications-wikipedia.pdf}
 
 
 \cleardoublepage
