--- a/rapport/CompteRendu.tex
+++ b/rapport/CompteRendu.tex
@@ -66,7 +66,10 @@
 \end{multicols}
 \cleardoublepage
 \cleardoublepage
-\cleardoublepage
+\newpage
+\strut
+\thispagestyle{empty}
+\newpage
 %=====Decharge de responsabilite=====
 \thispagestyle{empty}
 \begin{center}
